--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 </head>
 
 <body>
-  <main class="page">
+  <main>
     <!-- Component title -->
-    <h1 class="page__title">Product preview card component</h1>
+    <h1 class="title">Product preview card component</h1>
     <!-- Block "Card" -->
     <div class="card">
       <!-- Image that changes depending on the device (mobile or desktop) -->
       <picture>
         <source
           srcset="./images/image-product-mobile.webp 686w, ./images/image-product-desktop.webp 600w"
-          sizes="(max-width: 500px) 686px, 600px" type="image/webp">
+          sizes="(max-width: 90em) 686px, 600px" type="image/webp">
         <source
           srcset="./images/image-product-mobile.jpg 686w, ./images/image-product-desktop.jpg 600w"
-          sizes="(max-width: 500px) 686px, 600px" type="image/jpg">
+          sizes="(max-width: 90em) 686px, 600px" type="image/jpg">
         <img class="card__image" src="./images/image-product-desktop.jpg" alt="Image of Gabrielle perfume">
       </picture>
       <!-- The main content of this card -->
@@ -40,7 +40,10 @@
           <span class="card__value-now">&dollar;149.99</span>
           <span class="card__value-before">&dollar;169.99</span>
         </div>
-        <button class="card__btn" type="button">Add to Cart</button>
+        <button class="card__btn" id="btn" type="button">
+          <img class="card__icon-cart" src="./images/icon-cart.svg" alt="Cart icon">
+          <span class="card__text-cart">Add to Cart</span>
+        </button>
       </article>
     </div>
   </main>
