--- a/index.html
+++ b/index.html
@@ -21,12 +21,9 @@
     <div class="card">
       <!-- Image that changes depending on the device (mobile or desktop) -->
       <picture>
-        <source
-          srcset="./images/image-product-mobile.webp 686w, ./images/image-product-desktop.webp 600w"
-          sizes="(max-width: 90em) 686px, 600px" type="image/webp">
-        <source
-          srcset="./images/image-product-mobile.jpg 686w, ./images/image-product-desktop.jpg 600w"
-          sizes="(max-width: 90em) 686px, 600px" type="image/jpg">
+        <source srcset="./images/image-product-desktop.webp" media="(min-width: 90em)" type="image/webp">
+        <source srcset="./images/image-product-mobile.webp" media="(max-width: 90em)" type="image/webp">
+        <source srcset="./images/image-product-mobile.jpg" media="(max-width: 90em)" type="image/jpg">
         <img class="card__image" src="./images/image-product-desktop.jpg" alt="Image of Gabrielle perfume">
       </picture>
       <!-- The main content of this card -->
