--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Component title -->
     <h1 class="title">Product preview card component</h1>
     <!-- Block "Card" -->
-    <div class="card">
+    <article class="card">
       <!-- Image that changes depending on the device (mobile or desktop) -->
       <picture>
         <source srcset="./images/image-product-desktop.webp" media="(min-width: 48em)" type="image/webp">
@@ -27,22 +27,22 @@
         <img class="card__image" src="./images/image-product-desktop.jpg" alt="Image of Gabrielle perfume">
       </picture>
       <!-- The main content of this card -->
-      <article class="card__container">
+      <div class="card__container">
         <h2 class="card__label">Perfume</h2>
         <h3 class="card__title">Gabrielle Essence Eau De Parfum</h3>
         <p class="card__text">
           A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.
         </p>
-        <div class="card__price">
+        <p class="card__price">
           <span class="card__value-now">&dollar;149.99</span>
           <span class="card__value-before">&dollar;169.99</span>
-        </div>
+        </p>
         <button class="card__btn" id="btn" type="button">
           <img class="card__icon-cart" src="./images/icon-cart.svg" alt="Cart icon">
           <span class="card__text-cart">Add to Cart</span>
         </button>
-      </article>
-    </div>
+      </div>
+    </article>
   </main>
   <!-- Block "Attribution" -->
   <footer>
