--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </p>
         <button class="card__btn" id="btn" type="button">
           <img class="card__icon-cart" src="./images/icon-cart.svg" alt="Cart icon">
-          <span class="card__text-cart">Add to Cart</span>
+          Add to Cart
         </button>
       </div>
     </article>
